samples/_failures_safe/1761350794_e63ebf_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c47b8b3e.c: In function ‘main’:
./samples/SAFE/__tmp_c47b8b3e.c:161:16: error: missing terminating " character
  161 |         printf("%3d %3d %-10s %s
      |                ^~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_c47b8b3e.c:161:9: error: expected expression at end of input
  161 |         printf("%3d %3d %-10s %s
      |         ^~~~~~
./samples/SAFE/__tmp_c47b8b3e.c:161:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c47b8b3e.c:161:9: error: expected declaration or statement at end of input
